Stop wrapping words unnecessarily in tables

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -1,3 +1,9 @@
 @use "./base.scss";
 
 // put your custom CSS here!
+
+
+tr,
+td {
+  overflow-wrap: normal !important;
+}
